tests/macro_attributes/dim/03-invalid.stderr
error: expected identifier or integer literal
 --> tests/struct_attributes/dim/03-invalid.rs:3:17
  |
3 | #[lazy_nd(dim = false)]
  |                 ^^^^^
