tests/macro_attributes/dim/03-invalid.rs
use lazy_nd::lazy_nd;

#[lazy_nd(dim = false)]
struct Test {}

fn main() {}
